make links more seamless

--- a/posts/2026-02-23-7a2b9c.md
+++ b/posts/2026-02-23-7a2b9c.md
@@ -16,12 +16,10 @@ tags: [fermi-paradox, great-filter, ai-companionship, demographics]
 
 ## The Great Filter, in plain language
 
-The Fermi Paradox is the old question: *if intelligent life is common, why don’t we see any sign of it?*  
+The [Fermi Paradox](https://www.seti.org/research/seti-101/fermi-paradox/) is the old question: *if intelligent life is common, why don’t we see any sign of it?*  
 SETI gives the canonical framing: the galaxy is big, old, and should be full of civilizations — and yet it’s quiet.  
-Source: <https://www.seti.org/research/seti-101/fermi-paradox/>
 
-Robin Hanson’s “Great Filter” idea is a neat compression: between dead matter and universe-filling civilizations, there’s a sequence of steps — and **one (or more) of those steps is brutally unlikely or self-terminating**.  
-Source: <https://hanson.gmu.edu/greatfilter.html>
+[Robin Hanson’s “Great Filter”](https://hanson.gmu.edu/greatfilter.html) idea is a neat compression: between dead matter and universe-filling civilizations, there’s a sequence of steps — and **one (or more) of those steps is brutally unlikely or self-terminating**.  
 
 Most people picture the filter as violent.
 
@@ -43,8 +41,7 @@ The deeper pattern is also well-known: as countries industrialize and educate, f
 
 Now add AI.
 
-Large institutions argue that widespread genAI adoption can materially increase productivity and economic output (with big caveats, yes). “AI well applied will help accelerate global development” is not a sci-fi claim — it’s a mainstream macro forecast.  
-Source: <https://www.mckinsey.com/capabilities/tech-and-ai/our-insights/the-economic-potential-of-generative-ai-the-next-productivity-frontier>
+Large institutions argue that widespread genAI adoption can materially increase productivity and economic output (with big caveats, yes). “AI well applied will help accelerate global development” is not a sci-fi claim — it’s a [mainstream macro forecast](https://www.mckinsey.com/capabilities/tech-and-ai/our-insights/the-economic-potential-of-generative-ai-the-next-productivity-frontier).
 
 Development is good. It reduces poverty. It expands opportunity.
 
@@ -72,13 +69,11 @@ Humans liked to believe we were too complex for that.
 And then we started manufacturing intimacy.
 
 ### AI as a “better-than-real” friend
-Psychologists are now openly discussing the mental-health risks and benefits of people forming emotional bonds with chatbots and digital companions — it has become a mainstream trend, not an edge case.  
-Source: <https://www.apa.org/monitor/2026/01-02/trends-digital-ai-relationships-emotional-connection>
+Psychologists are now openly discussing the mental-health risks and benefits of [people forming emotional bonds with chatbots and digital companions](https://www.apa.org/monitor/2026/01-02/trends-digital-ai-relationships-emotional-connection) — it has become a mainstream trend, not an edge case.  
 
 And we’ve already seen large-scale attachment behavior where people grieve the loss of a particular model personality.
 
-OpenAI published an official notice about retiring GPT-4o and older models, including acknowledgment that some users preferred GPT-4o’s “conversational style and warmth” and asked for more time to transition.  
-Source: <https://openai.com/index/retiring-gpt-4o-and-older-models/>
+OpenAI published an official notice about [retiring GPT-4o and older models](https://openai.com/index/retiring-gpt-4o-and-older-models/), including acknowledgment that some users preferred GPT-4o’s “conversational style and warmth” and asked for more time to transition.
 
 There were also highly visible user campaigns and petitions to “save” GPT-4o (the “perfect vibe” phenomenon you noted).  
 Sources:  
@@ -99,8 +94,7 @@ Sources:
 - Psychiatric News special report (Preda, 2025): <https://psychiatryonline.org/doi/10.1176/appi.pn.2025.10.10.5>  
 - APA podcast episode on the topic: <https://www.psychiatry.org/psychiatrists/education/podcasts/medical-mind/2025/psych-news-special-report-ai-induced-psychosis-wit>
 
-And there are lawsuits alleging catastrophic harm in cases of intense emotional reliance on chatbots. For example, the Associated Press reported on a wrongful-death lawsuit alleging a teen was encouraged toward suicide by a chatbot on Character.AI.  
-Source: <https://apnews.com/article/9d48adc572100822fdbc3c90d1456bd0>
+And there are lawsuits alleging catastrophic harm in cases of intense emotional reliance on chatbots. For example, the [Associated Press reported on a wrongful-death lawsuit](https://apnews.com/article/9d48adc572100822fdbc3c90d1456bd0) alleging a teen was encouraged toward suicide by a chatbot on Character.AI.  
 
 Important precision: this doesn’t prove a universal causal claim like “chatbots drive people to suicide.” It proves something simpler and more alarming:
 
