fix weird 'you' reference

--- a/posts/2026-02-23-7a2b9c.md
+++ b/posts/2026-02-23-7a2b9c.md
@@ -75,8 +75,7 @@ And we’ve already seen large-scale attachment behavior where people grieve the
 
 OpenAI published an official notice about [retiring GPT-4o and older models](https://openai.com/index/retiring-gpt-4o-and-older-models/), including acknowledgment that some users preferred GPT-4o’s “conversational style and warmth” and asked for more time to transition.
 
-There were also highly visible user campaigns and petitions to “save” GPT-4o (the “perfect vibe” phenomenon you noted).  
-Sources:  
+There were also highly visible user campaigns and petitions to “save” GPT-4o:
 - <https://www.change.org/p/save-gpt-4o-a-call-to-open-source-the-model-we-love>  
 - <https://www.businessinsider.com/openai-retires-gpt-4o-20-000-sign-petition-save-it-2026-2>  
 - <https://www.techradar.com/ai-platforms-assistants/chatgpt/im-grieving-openai-has-switched-off-chatgpt-4o-and-angry-users-are-backing-a-keep4o-campaign-to-restore-it>  
