--- a/posts/2026-02-23-7a2b9c.md
+++ b/posts/2026-02-23-7a2b9c.md
@@ -122,10 +122,7 @@ It only requires that “enough” people don’t.
 
 If civilizations build AI, why don’t we see self-replicating probes everywhere?
 
-This is a classic line of reasoning in Fermi Paradox debates: if von Neumann probes are feasible, galaxy-wide spread could happen on timescales short compared to the age of the galaxy.  
-A modern scholarly discussion of that “probe” argument (and the Sagan–Tipler debate) is collected here:  
-- Cambridge (collection): <https://www.cambridge.org/core/journals/international-journal-of-astrobiology/collections/the-prospect-of-von-neumann-probes-and-the-implications-for-the-sagan-tipler-debate>  
-- Example paper (Ellery, 2022): <https://www.cambridge.org/core/journals/international-journal-of-astrobiology/article/prospect-of-von-neumann-probes-and-the-implications-for-the-sagantipler-debate/5901736ED2CA16ECF276704736A690AC>
+This is a classic line of reasoning in [Fermi Paradox debates](https://www.cambridge.org/core/journals/international-journal-of-astrobiology/collections/the-prospect-of-von-neumann-probes-and-the-implications-for-the-sagan-tipler-debate): if von Neumann probes are feasible, galaxy-wide spread could happen on timescales short compared to the age of the galaxy.
 
 But here’s the twist for the “AI is the Great Filter” story:
 
